Add monster/[id]/drops endpoint
